--- a/style.css
+++ b/style.css
@@ -27,4 +27,21 @@
 
 body {
   font-family: Roboto, sans-serif;
+  display: flex;
+  justify-content: center;
+}
+
+.container {
+  max-width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: center;
+  min-height: 100vh;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
