--- a/style.css
+++ b/style.css
@@ -28,20 +28,50 @@
 body {
   font-family: Roboto, sans-serif;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
 }
 
 .container {
-  max-width: 80%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: stretch;
   align-content: center;
   min-height: 100vh;
+}
+
+.header,
+.hero,
+.info,
+.quote,
+.cta,
+.footer {
+  margin: 0 15%;
+}
+
+.content-1 {
+  background-color: var(--dark-bg-clr);
+  color: var(--hero-main-text-clr);
 }
 
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.header ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  gap: 10px;
+}
+
+.content-2 {
+  background-color: white;
+}
+
+.content-3 {
+  background-color: var(--quote-section-bg-clr);
 }
