--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   --dark-bg-clr: #1f2937;
 
   --hero-main-text-clr: #f9faf8;
-  --hero-main-text-wgt: extra-bold;
+  --hero-main-text-wgt: 900;
   --hero-main-text-sze: 48px;
 
   --hero-sec-text-clr: #e5e7eb;
@@ -15,7 +15,7 @@
 
   --info-header-text-clr: #1f2937;
   --info-header-text-sze: 36px;
-  --info-header-text-wgt: extra-bold;
+  --info-header-text-wgt: 900;
 
   --quote-section-bg-clr: #e5e7eb;
 
@@ -23,6 +23,8 @@
   --quote-text-sze: 36px;
   --quote-text-stl: italic;
   --quote-text-wgt: light;
+
+  --img-placeholder-clr: #aaa;
 }
 
 body {
@@ -59,6 +61,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 75px;
+}
+
+.header-logo {
+  font-size: var(--header-logo-text-sze);
+  color: var(--header-logo-text-clr);
+  font-weight: 900;
 }
 
 .header ul {
@@ -66,6 +75,60 @@ body {
   list-style: none;
   padding: 0;
   gap: 10px;
+  color: var(--hero-sec-text-clr);
+  font-size: var(--hero-sec-text-sze);
+}
+
+.hero {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+  align-items: center;
+}
+
+.hero-text,
+.image-placeholder {
+  width: 450px;
+}
+
+.hero-main-text {
+  font-size: var(--hero-main-text-sze);
+  font-weight: 900;
+  color: var(--hero-main-text-clr);
+}
+
+.hero-sec-text {
+  color: var(--hero-sec-text-clr);
+  font-size: var(--hero-sec-text-sze);
+}
+
+.button {
+  width: 100px;
+  height: 40px;
+  background-color: var(--btn-cta-clr);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  margin-top: 16px;
+}
+
+.button a {
+  color: var(--hero-sec-text-clr);
+  font-size: var(--hero-sec-text-sze);
+  text-decoration: none;
+}
+
+.image-placeholder {
+  background-color: var(--img-placeholder-clr);
+  display: flex;
+  align-self: stretch;
+  align-content: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
 }
 
 .content-2 {
