--- a/style.css
+++ b/style.css
@@ -133,6 +133,41 @@ body {
 
 .content-2 {
   background-color: white;
+  display: flex;
+  flex-direction: column;
+  padding-top: 75px;
+  padding-bottom: 100px;
+}
+
+.info-header-text {
+  font-size: var(--info-header-text-sze);
+  font-weight: var(--info-header-text-wgt);
+  color: var(--info-header-text-clr);
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+.card-group {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+
+.card-text,
+.card-image {
+  width: 150px;
+}
+
+.card-image {
+  border-color: #3882f6;
+  border-width: 4px;
+  border-style: solid;
+  border-radius: 10px;
+  height: 150px;
+}
+
+.card-text {
+  text-align: center;
 }
 
 .content-3 {
